--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -36,86 +36,84 @@
                         <option value="new">New...</option>
                     </select>
                 </div>
-                <button class="switchBtn" onclick="switchAction();">
-                    <span id="switchLabel">Switch to chatbot</span>
+                <button class="btn btn-primary switchBtn" onclick="switchAction();">
+                    <span id="switchLabel-placeholder">
+                        <span id="switchLabel">Switch to chatbot</span>
+                    </span>
                     <div class="icon-switch-container" id="chat-icon-switch">
-                        <img width="40px" height="40px"
+                        <img width="27px" height="27px"
                             src="{{ url_for('static', filename='SemanticRAG/img/chatbot.svg') }}" alt="icon">
                     </div>
                     <div class="icon-switch-container" id="search-icon-switch">
-                        <i class="fas fa-search search-icon fa-lg"></i>
+                        <i class="fas fa-search" style="vertical-align: middle; color: white; font-size: 20px; width: 20px; height: 20px;"></i>
                     </div>
                 </button>
             </div>
         </div>
+        <div id="documents-open">
+            <button class="btn btn-primary documents-open-btn" data-bs-toggle="offcanvas" data-bs-target="#rightDrawer" aria-controls="rightDrawer" id="documents-open-btn">Documents</button>
+        </div>
     </header>
     <main>
         <div id="main-content">
-            <div id="left-div">
-                <div id="search-div">
-                    <div id="search-options">
-                        <div class="search-option-big text-center">
-                            <span>Search</span>
-                        </div>
-                        <div class="search-option-small">
-                            <span>Top&#8209;k</span>
-                        </div>
-                        <div class="search-option-small">
-                            <span>Score threshold</span>
-                        </div>
+            <div id="search-div">
+                <div id="search-options">
+                    <div class="search-option-big text-center">
+                        <span>Search</span>
                     </div>
-                    <div id="search-options">
-                        <div class="search-option-big" id="searchbar-container">
-                            <i class="fas fa-search search-icon"></i>
-                            <div id="input-text-container">
-                                <textarea rows="1" id="input-text-search" placeholder="Search"></textarea>
-                            </div>
-                        </div>
-                        <div class="search-option-small">
-                            <input id="topk" type="number" min="1" max="100" class="param-item" placeholder="5" />
-                        </div>
-                        <div class="search-option-small">
-                            <input id="score" step="0.1" type="number" min="0.1" max="1" class="param-item"
-                                placeholder="0.6" />
-                        </div>
+                    <div class="search-option-small">
+                        <span>Top&#8209;k</span>
                     </div>
-                    <div id="results"></div>
-                </div>
-                <div id="chat-div">
-                    <div style="overflow-y: auto;">
-                        <div id="conversation"></div>
-                        <div id="retreived-text-container">
-                            <h3>Relevant text</h3>
-                            <div id="retreived-text" class="message"></div>
-                        </div>
-                    </div>
-
-                    <div id="sticky-footer">
-                        <div class="sticky-footer-container">
-                            <div id="input-text-container">
-                                <textarea rows="1" id="input-text" placeholder="Enter your question"></textarea>
-                            </div>
-                            <div class="param">
-                                <span>Top&#8209;k</span>
-                                <input id="topk-chat" type="number" min="1" max="100" class="param-item bg-white"
-                                    placeholder="5" type="text" />
-                            </div>
-                            <div class="param">
-                                <span>Score threshold</span>
-                                <input id="score-chat" step="0.1" type="number" min="0.1" max="1"
-                                    class="param-item bg-white" placeholder="0.6" type="text" />
-                            </div>
-                            <button onclick="onMessageSend()" id="send-button">
-                                <i class="fas fa-paper-plane"></i>
-                            </button>
-                        </div>
+                    <div class="search-option-small">
+                        <span>Score threshold</span>
                     </div>
                 </div>
+                <div id="search-options">
+                    <div class="search-option-big" id="searchbar-container">
+                        <i class="fas fa-search search-icon"></i>
+                        <div id="input-text-container">
+                            <textarea rows="1" id="input-text-search" placeholder="Search"></textarea>
+                        </div>
+                    </div>
+                    <div class="search-option-small">
+                        <input id="topk" type="number" min="1" max="100" class="param-item" placeholder="5" />
+                    </div>
+                    <div class="search-option-small">
+                        <input id="score" step="0.1" type="number" min="0.1" max="1" class="param-item"
+                            placeholder="0.6" />
+                    </div>
+                </div>
+                <div id="results"></div>
             </div>
-            <div class="divider"></div>
-            <div id="documents-div">
-                <span class="section-title">Documents</span>
-                <div id="documents-container"></div>
+            <div id="chat-div">
+                <div style="overflow-y: auto;">
+                    <div id="conversation"></div>
+                    <div id="retrieved-text-container">
+                        <h3>Relevant text</h3>
+                        <div id="retrieved-text" class="message"></div>
+                    </div>
+                </div>
+
+                <div id="sticky-footer">
+                    <div class="sticky-footer-container">
+                        <div id="input-text-container">
+                            <textarea rows="1" id="input-text" placeholder="Enter your question"></textarea>
+                        </div>
+                        <div class="param">
+                            <span>Top&#8209;k</span>
+                            <input id="topk-chat" type="number" min="1" max="100" class="param-item bg-white"
+                                placeholder="5" type="text" />
+                        </div>
+                        <div class="param">
+                            <span>Score threshold</span>
+                            <input id="score-chat" step="0.1" type="number" min="0.1" max="1"
+                                class="param-item bg-white" placeholder="0.6" type="text" />
+                        </div>
+                        <button class="btn btn-primary send-button" id="send-button" onclick="onMessageSend()" >
+                            <i class="fas fa-paper-plane"></i>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -143,6 +141,15 @@
             </div>
         </div>
     </div>
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="rightDrawer" aria-labelledby="rightDrawerLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="rightDrawerLabel">Documents</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div id="documents-container"></div>
+    </div>
+
     <footer>
         <div class=" bg-primary d-flex justify-content-center copyright-container">
             <span class="copyright"> Copyright © 2024 ICS-FORTH </span>
