Siimplify structure and add KG response functionality (not implemented)

--- a/app/static/SemanticRAG/css/default.css
+++ b/app/static/SemanticRAG/css/default.css
@@ -27,9 +27,9 @@ header > * {
   }
 
 .logo {
-    width: 350px;
+    width: 15%;
     height: auto;
-    align-self: start;
+    align-self: center;
     justify-self: start;
 }
 
