Improve structure and handle empty collections

--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -130,7 +130,7 @@
                         <label for="name">Collection name</label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
 
-                        <label for="documents">Documents</label>
+                        <label id="documentsLabel" for="documents">Documents</label>
                         <input class="form-control" id="documents" type="file" name="files[]" multiple>
                     </form>
                 </div>
