--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -154,11 +154,17 @@
           <div style="overflow-y: auto">
             <div id="conversation"></div>
             <div class="d-flex">
-              <div class="retrieved-text-container" id="retrieved-text-rag-container">
+              <div
+                class="retrieved-text-container"
+                id="retrieved-text-rag-container"
+              >
                 <h3>Relevant text RAG</h3>
                 <div id="retrieved-text-rag" class="message"></div>
               </div>
-              <div class="retrieved-text-container"  id="retrieved-text-kgrag-container">
+              <div
+                class="retrieved-text-container"
+                id="retrieved-text-kgrag-container"
+              >
                 <h3>Relevant text KG-RAG</h3>
                 <div id="retrieved-text-kgrag" class="message"></div>
               </div>
@@ -349,7 +355,21 @@
 
     <footer>
       <div class="bg-primary d-flex justify-content-center copyright-container">
-        <span class="copyright"> Copyright © 2024 ICS-FORTH </span>
+        <a
+          href="http://www.ics.forth.gr/isl/sar/privacy/TermsOfUse-ISL_EN.pdf"
+          class="copyright"
+          target="_blank"
+          >Terms of Use</a
+        >
+        <span class="copyright"> | </span>
+        <a
+          href="http://www.ics.forth.gr/isl/sar/privacy/PrivacyPolicy-ISL_EN.pdf"
+          style="padding-left: 0px !important"
+          class="copyright"
+          target="_blank"
+          >Privacy Policy</a
+        >
+        <span class="copyright"> | © Copyright 2025 FOUNDATION FOR RESEARCH & TECHNOLOGY - HELLAS, All rights reserved. </span>
       </div>
     </footer>
 
