Improvements and fix for production

--- a/app/static/SemanticRAG/csv/styles.css
+++ b/app/static/SemanticRAG/csv/styles.css
@@ -38,3 +38,9 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.highlighted-cell {
+  background-color: yellow !important;
+  /* font-weight: bold; */
+  color: black;
+}
