--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -274,6 +274,15 @@
         </div>
       </div>
     </main>
+
+    <div
+      id="loader"
+      class="d-none position-fixed top-0 start-0 w-100 h-100 bg-dark bg-opacity-50 justify-content-center align-items-center"
+      style="z-index: 1050"
+    >
+      <i class="fas fa-spinner fa-spin fa-3x text-white"></i>
+    </div>
+
     <div
       class="modal"
       id="newCollectionModal"
@@ -316,8 +325,15 @@
                 type="file"
                 name="files[]"
                 multiple
+                accept=".pdf,.csv"
               />
             </form>
+          </div>
+          <div class="px-3">
+            <div class="alert alert-danger text-center" role="alert">
+              ⚠️ Uploading a large number of documents or very large files may
+              slow down indexing.
+            </div>
           </div>
           <div class="modal-footer">
             <button
@@ -369,7 +385,10 @@
           target="_blank"
           >Privacy Policy</a
         >
-        <span class="copyright"> | © Copyright 2025 FOUNDATION FOR RESEARCH & TECHNOLOGY - HELLAS, All rights reserved. </span>
+        <span class="copyright">
+          | © Copyright 2025 FOUNDATION FOR RESEARCH & TECHNOLOGY - HELLAS, All
+          rights reserved.
+        </span>
       </div>
     </footer>
 
