Small UI improvements and bug fixes

--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -64,6 +64,11 @@
               <option value="new">New...</option>
             </select>
           </div>
+            <button class="btn btn-primary switchBtn" onclick="openModal();">
+            <span id="addCollection-placeholder">
+              <span>Add Collection</span>
+            </span>
+          </button>
           <button class="btn btn-primary switchBtn" onclick="switchAction();">
             <span id="switchLabel-placeholder">
               <span id="switchLabel">Switch to chatbot</span>
