--- a/app/templates/components/documents.html
+++ b/app/templates/components/documents.html
@@ -2,9 +2,26 @@
 <ul>
     {% for document in documents %}
         <li>
+
+        {% if document.endswith('.pdf') %}
             <a href="{{ url_for('main.show_pdf', collection=collection, src=document) }}">
                 {{ document }}
             </a>
+        {% else %}
+                <a href="{{ url_for('main.show_csv',collection=collection, src=document, row=-1) }}">
+                    {{ document }}
+                </a>
+        {% endif %}
+
         </li>
     {% endfor %}
 </ul>
+
+
+            {# {% if document.source.endswith('.csv') %}
+
+            {% else %}
+                <a href="{{ url_for('main.show_pdf',collection=collection, src=document.source, keyword=document.content) }}">
+                    {{ document.source }}
+                </a> (page: {{ document.page }})
+            {% endif %} #}
