--- a/app/templates/components/search_results.html
+++ b/app/templates/components/search_results.html
@@ -1,6 +1,7 @@
 <ul>
     {% for document in documents %}
         <li>
+            <b>{{ loop.index }})</b>
             {% if document.source.endswith('.csv') %}
                 <a href="{{ url_for('main.show_csv',collection=collection, src=document.source, row=document.row) }}">
                     {{ document.source }}
