--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -138,7 +138,7 @@
                 min="1"
                 max="100"
                 class="param-item"
-                placeholder="5"
+                placeholder="6"
               />
             </div>
             <div class="search-option-small">
@@ -196,7 +196,7 @@
                         onclick="onRecommendationClick(this.textContent)"
                         class="btn btn-light text-nowrap mx-2"
                       >
-                        How is ecosystem restoration measured?
+                        Is the freshwater sculpin officially protected under the EU Habitats Directive?
                       </button>
                     </div>
                     <div class="swiper-slide">
@@ -205,7 +205,7 @@
                         onclick="onRecommendationClick(this.textContent)"
                         class="btn btn-light text-nowrap mx-2"
                       >
-                        What causes ecosystem degradation?
+                        Did tigers ever exist in Bali?
                       </button>
                     </div>
                     <div class="swiper-slide">
@@ -214,7 +214,7 @@
                         onclick="onRecommendationClick(this.textContent)"
                         class="btn btn-light text-nowrap mx-2"
                       >
-                        How is ecosystem restoration measured?
+                        Is the freshwater sculpin officially protected under the EU Habitats Directive?
                       </button>
                     </div>
                     <div class="swiper-slide">
@@ -223,7 +223,7 @@
                         onclick="onRecommendationClick(this.textContent)"
                         class="btn btn-light text-nowrap mx-2"
                       >
-                        What causes ecosystem degradation?
+                        Did tigers ever exist in Bali?
                       </button>
                     </div>
                   </div>
@@ -248,7 +248,7 @@
                       min="1"
                       max="100"
                       class="param-item bg-white"
-                      placeholder="5"
+                      placeholder="6"
                       type="text"
                     />
                   </div>
@@ -261,7 +261,7 @@
                       min="0"
                       max="1"
                       class="param-item bg-white"
-                      placeholder="0.4"
+                      placeholder="0.0"
                       type="text"
                     />
                   </div>
